--- a/pom.xml
+++ b/pom.xml
@@ -18,18 +18,29 @@
         <dependency>
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-core</artifactId>
-            <version>4.0.1</version>
+            <version>2.1.6</version>
         </dependency>
         <dependency>
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-dependencies</artifactId>
-            <version>4.0.1</version>
+            <version>2.1.6</version>
             <type>pom</type>
         </dependency>
+
         <dependency>
-            <groupId>com.izettle</groupId>
-            <artifactId>dropwizard-metrics-influxdb</artifactId>
-            <version>1.3.4</version>
+            <groupId>io.prometheus</groupId>
+            <artifactId>simpleclient</artifactId>
+            <version>0.16.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.prometheus</groupId>
+            <artifactId>simpleclient_servlet</artifactId>
+            <version>0.16.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.prometheus</groupId>
+            <artifactId>simpleclient_dropwizard</artifactId>
+            <version>0.16.0</version>
         </dependency>
     </dependencies>
 </project>
